[package]
name = "sankaku-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sankaku_core = { package = "sankaku-core", path = "../sankaku-core" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync"] }
