[package]
name = "sankaku-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
webrtc = ["dep:serde_json", "dep:webrtc"]

[dependencies]
chacha20poly1305 = "0.10" # Encryption (The Shield)
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
rand_core = { version = "0.6", features = ["std"] }

sankaku-wirehair-sys = { path = "../sankaku-wirehair-sys" }
sankaku-openzl-sys = { path = "../sankaku-openzl-sys" }
rand = "0.10.0"
bytes = "1.10"
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
webrtc = { version = "0.14", optional = true }
